--- a/frontend/package.json
+++ b/frontend/package.json
@@ -93,6 +93,7 @@
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.1",
     "react-code-input": "^3.10.1",
+    "react-credit-cards-2": "^1.0.3",
     "react-day-picker": "^8.8.0",
     "react-dom": "^17.0.2",
     "react-grid-layout": "^1.3.4",
